--- a/index.html
+++ b/index.html
@@ -3,24 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.scss" />
-
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
-    Sedans Choose a sedan for its affordability and excellent fuel economy.
-    Ideal for cruising in the city or on your next road trip. SUVs Take an SUV
-    for its spacious interior, power, and versatility. Perfect for your next
-    family vacation and off-road adventures. Luxury Cruise in the best car
-    brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-    rental and arrive in style.
+    <main>
+      <article class="one">
+        <img src="images/icon-sedans.svg" alt="" />
+        <h4>Sedans</h4>
+        <p>
+          Choose a sedan for its affordability and excellent fuel economy. Ideal
+          for cruising in the city or on your next road trip.
+        </p>
+        <button>Learn More</button>
+      </article>
+      <article class="two">
+        <img src="images/icon-suvs.svg" alt="" />
+        <h4>SUVs</h4>
+        <p>
+          Take an SUV for its spacious interior, power, and versatility. Perfect
+          for your next family vacation and off-road adventures.
+        </p>
+        <button>Learn More</button>
+      </article>
+      <article class="three">
+        <img src="images/icon-luxury.svg" alt="" />
+        <h4>Luxury</h4>
+        <p>
+          Cruise in the best car brands without the bloated prices. Enjoy the
+          enhanced comfort of a luxury rental and arrive in style.
+        </p>
+        <button>Learn More</button>
+      </article>
+    </main>
     <footer>
       <div class="attribution">
         Challenge by
